--- a/css/style-main.css
+++ b/css/style-main.css
@@ -49,18 +49,19 @@ body {
 #jumbotron1judul {
   text-align: center;
 }
-.dropdown-menu li{
+.dropdown-menu li {
   position: relative;
 }
-.dropdown-menu .submenu{ 
+.dropdown-menu .dropdown-submenu {
   display: none;
   position: absolute;
-  left:100%; top:-7px;
+  left: 100%;
+  top: -7px;
 }
-.dropdown-menu .submenu-left{ 
-  right:100%; left:auto;
+.dropdown-menu .dropdown-submenu-left {
+  right: 100%;
+  left: auto;
 }
-.dropdown-menu > li:hover{ background-color: #f1f1f1 }
-.dropdown-menu > li:hover > .submenu{
+  .dropdown-menu > li:hover > .dropdown-submenu {
   display: block;
 }
