--- a/css/style-main.css
+++ b/css/style-main.css
@@ -65,3 +65,7 @@ body {
   .dropdown-menu > li:hover > .dropdown-submenu {
   display: block;
 }
+#HomeButton {
+  margin-left: auto;
+  margin-right: auto;
+}
